Add paths for haris and wira with source set to publisher

--- a/mediamtx.yml
+++ b/mediamtx.yml
@@ -5,6 +5,12 @@ webrtc: yes
 hls: yes
 
 paths:
+  haris:
+    record: no
+    source: publisher
+  wira:
+    record: no
+    source: publisher
   all:
     record: no
     source: publisher
