Add live streaming HTML template with HLS support and error handling

--- a/mediamtx.yml
+++ b/mediamtx.yml
@@ -14,3 +14,8 @@ paths:
   all:
     record: no
     source: publisher
+
+  # streaming cctv
+  cam1:
+    source: rtsp://admin:Minergo%402024%21@id2.labkom.us:5188/axis-media/media.amp
+    rtspTransport: tcp
